LPS-71915-control-menu added classes to style company-detail and company-name within the side bar header to fix company name from overflowing into menu.

--- a/modules/apps/web-experience/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/web-experience/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/main.scss
@@ -14,6 +14,20 @@
 			padding-top: 16px;
 		}
 
+		.company-details {
+			display: flex;
+		}
+
+		.company-name {
+			display: block;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			word-break: normal;
+			word-wrap: normal;
+			width: 250px;
+		}
+
 		.sidenav-close {
 			float: right;
 			margin-right: -2px;
